# iroh-dns-server

./: Cargo.toml  README.md
.github/workflows/: ci.yml
iroh-dns/: Cargo.toml
iroh-dns-server/: Cargo.toml  config.dev.toml  config.prod.toml
iroh-dns-server/examples/: publish.rs  resolve.rs
iroh-dns-server/src/: config.rs  dns.rs  http.rs  lib.rs  main.rs  mainline.rs  metrics.rs  run.rs  state.rs  store.rs  util.rs
iroh-dns-server/src/dns/: authority.rs  node_authority.rs
iroh-dns-server/src/http/: doh.rs  error.rs  pkarr.rs  publish.rs  rate_limiting.rs  tls.rs
iroh-dns-server/src/http/doh/: extract.rs  response.rs
iroh-dns-server/src/http/extract/: json.rs
iroh-dns/examples/: publish.rs  publish_pkarr.rs  publish_sig0.rs  resolve.rs
iroh-dns/src/: discovery.rs  dns.rs  lib.rs  packet.rs  pkarr.rs  publish.rs  resolve.rs  sig0.rs
src/: config.rs  dns.rs  http.rs  main.rs
src/http/: doh.rs  tls.rs
