[package]
name = "iroh-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
futures = "0.3.30"
hex = "0.4.3"
hickory-client = { version = "0.24.0", features = ["rustls", "serde", "webpki-roots", "dns-over-https", "dnssec"] }
hickory-proto = { version = "0.24.0", features = ["dnssec", "ring"] }
hickory-resolver = { version = "0.24.0", features = ["dns-over-https", "dns-over-tls", "tokio-rustls", "webpki-roots", "dns-over-rustls", "dns-over-https-rustls"] }
iroh-base = { version = "0.12.0", features = ["base32"] }
iroh-net = { version = "0.12.0", default-features = false }
# pkarr = { version = "1.0.5", features = ["async", "relay"] }
pkarr = { git = "https://github.com/Frando/pkarr.git", branch = "iroh-fixes", features = ["async", "relay"], default_features = false }
reqwest = { version = "0.11.24", features = ["rustls"] }
ring = "0.16"
rustls = "0.21"
tokio = { version = "1.36.0", features = ["rt", "sync"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
